--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ alembic==1.0.5
 atomicwrites==1.2.1
 attrs==18.2.0
 Click==7.0
+config==0.4.0
 Flask==1.0.2
 Flask-Migrate==2.3.1
 Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
 itsdangerous==1.1.0
 Jinja2==2.10
 Mako==1.0.7
@@ -18,3 +20,4 @@ python-editor==1.0.3
 six==1.12.0
 SQLAlchemy==1.2.15
 Werkzeug==0.14.1
+WTForms==2.2.1
